Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23926

Fix warnings generated during compilation of plugin/auth_pam/mapper/pam_user_map.c on MacOS

    XMLWordPrintable

Details

    Description

      On compiling the file plugin/auth_pam/mapper/pam_user_map.c on MacOS the following warning are generated.

      In case MariaDB serer is build with -DCMAKE_BUILD_TYPE=Debug it results in build error.
      In other words, debug build can't be finished successfully on MacOS.

       88%] Building C object plugin/auth_pam/CMakeFiles/pam_user_map.dir/mapper/pam_user_map.c.o
      /Users/shulga/projects/mariadb/server-10.2/plugin/auth_pam/mapper/pam_user_map.c:87:41: error: passing
            'gid_t *' (aka 'unsigned int *') to parameter of type 'int *' converts between pointers to integer types
            with different sign [-Werror,-Wpointer-sign]
        if (getgrouplist(user, user_group_id, loc_groups, &ng) < 0)
                                              ^~~~~~~~~~
      /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/usr/include/unistd.h:650:43: note:
            passing argument to parameter here
      int      getgrouplist(const char *, int, int *, int *);
                                                    ^
      /Users/shulga/projects/mariadb/server-10.2/plugin/auth_pam/mapper/pam_user_map.c:95:46: error: passing
            'gid_t *' (aka 'unsigned int *') to parameter of type 'int *' converts between pointers to integer types
            with different sign [-Werror,-Wpointer-sign]
          (void) getgrouplist(user, user_group_id, loc_groups, &ng);
                                                   ^~~~~~~~~~
      /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.sdk/usr/includ
      e/unistd.h:650:43: note:
            passing argument to parameter here
      int      getgrouplist(const char *, int, int *, int *);
                                                    ^
      2 errors generated.
      

      Attachments

        Activity

          People

            shulga Dmitry Shulga
            shulga Dmitry Shulga
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: